# tradroom

./: .env.example  .gitignore  README.md  korea_quant_trading_blueprint.md  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
scripts/: check_live.py  run_backtest.py  run_ingest.py  run_recommend.py
tests/: test_pipeline.py
tradroom/: __init__.py  config.py
tradroom/api/: __init__.py  main.py
tradroom/backtest/: __init__.py  engine.py  metrics.py  walkforward.py
tradroom/data/: __init__.py  base.py  dart.py  ecos.py  kis.py  live.py  loader.py  sample.py  storage.py
tradroom/features/: __init__.py  engine.py  normalize.py  technical.py
tradroom/portfolio/: __init__.py  monitor.py  recommender.py  sizing.py
tradroom/signals/: __init__.py  regime.py  scoring.py  sector.py  timing.py
