[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tradroom"
version = "0.1.0"
description = "한국 증시 퀀트 트레이딩 의사결정 지원 엔진 (추세추종 멀티팩터)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
live = ["pykrx>=1.2.8", "finance-datareader>=0.9.50", "OpenDartReader>=0.2.2", "requests>=2.32.0"]
api = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0"]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
include = ["tradroom*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
